cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif(NOT CMAKE_BUILD_TYPE)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS_INIT} -Wall -fPIC")

find_package(Eigen3 REQUIRED)
ADD_DEFINITIONS(-DEIGEN_NO_DEBUG)
include_directories(${EIGEN3_INCLUDE_DIR})
include_directories("src")
include_directories("matplotlib-cpp/")

add_library(double_integrator STATIC src/double_integrator.cpp)
add_library(sbmp STATIC src/sbmp.cpp)
target_link_libraries(sbmp double_integrator)

option(BUILD_EXAMPLE "build google test" ON)
IF(BUILD_EXAMPLE)
    find_package(PythonLibs 3 REQUIRED)
    include_directories(${PYTHON_INCLUDE_DIRS})
    add_executable(fmt_example example/fmt_example.cpp)
    target_link_libraries(fmt_example ${PYTHON_LIBRARIES} sbmp)
    add_executable(rrt_example example/rrt_example.cpp)
    target_link_libraries(rrt_example ${PYTHON_LIBRARIES} sbmp)
ENDIF()

option(BUILD_TEST "build google test" ON)
IF(BUILD_TEST)
    find_package(GTest REQUIRED)
    include_directories(${GTEST_INCLUDE_DIRS})
    add_executable(test_di tests/test_double_integrator.cpp)
    target_link_libraries(test_di ${GTEST_LIBRARIES} pthread sbmp)

    add_executable(test_rrt tests/test_rrt.cpp)
    target_link_libraries(test_rrt ${GTEST_LIBRARIES} pthread sbmp)
    add_test(NAME test_rrt COMMAND test_rrt)
    add_test(NAME test_di COMMAND test_di)
    enable_testing()
ENDIF()

option(PIP_INSTALL "build python binding" ON)
iF(PIP_INSTALL)
    add_subdirectory(pybind11)
    pybind11_add_module(_disbmp src/wrapper.cpp)
    target_link_libraries(_disbmp PRIVATE sbmp)
    install(TARGETS _disbmp DESTINATION .)
ENDIF()
